Cleanup after merge, update version to 2.0.0